// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <PageLoader
      pageName="Organization"
    />
  </div>
</div>
`;

exports[`Render should render organization and preferences 1`] = `
<div>
  <PageHeader
    model={Object {}}
  />
  <div
    className="page-container page-body"
  >
    <div>
      <OrgProfile
        onOrgNameChange={[Function]}
        onSubmit={[Function]}
        orgName="Cool org"
      />
      <SharedPreferences
        resourceUri="org"
      />
    </div>
  </div>
</div>
`;
